syntax = "proto2";

package protoAuth;

message Login
{
	required int32 id = 1;
	required string email = 2;
	required string password = 3;
}

message LoginRespose
{
	required int32 reqId = 1;
	required eLoginResult result = 2;

   	enum eLoginResult{
    		SUCCESS = 0;
    		INVALID_PASSWORD = 1;
    		EMAIL_NOT_FOUND = 2;
    		INTERNAL_SERVER_ERROR = 3;
  	}
	
}

message Registeration
{
	required int32 id = 1;
	required string name = 2;
	required string email = 3;
	required string password = 4;
}

message RegisterationRespose
{
	required int32 reqId = 1;
	required eRegResult result = 2;

   	enum eRegResult{
    		SUCCESS = 0;
		ACCOUNT_ALREADY_EXISTS = 1;
    		PASSWORD_CONDITION_CHECK = 2;
    		INTERNAL_SERVER_ERROR = 3;
  	}

}
